plant recom test extended